fix: Display breadcrumbs correctly on mobile and desktop devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,12 +111,20 @@ nav h1 a:hover {
 #breadcrumb {
   padding: 16px 40px;
   list-style: none;
-  background-color: #eee;
-  font-size: 1rem;
-  margin: 0;
+  background-color: #fffefe;
+  font-size: 0.8125rem;
+  margin: 80px 0 0;
   width: 100%;
-  /* width: 50%; */
+  border-bottom: 1px solid #d9d9d9;
 }
+
+
+@media all and (min-width: 1200px) {
+  #breadcrumb {
+    width: 50%;
+  }
+}
+
 
 /* Display list items side by side */
 #breadcrumb li {
@@ -129,17 +137,9 @@ nav h1 a:hover {
   color: black;
   content: "/\00a0";
 }
-
 /* Add a color to all links inside the list */
-#breadcrumb li a {
-  color: #db511d;
-  text-decoration: none;
-}
-
-/* Add a color on mouse-over */
-#breadcrumb li a:hover {
-  color: #db511d;
-  text-decoration: underline;
+#breadcrumb li:first-child a {
+  text-transform: uppercase;
 }
 
 /* ====================== Map ====================== */
@@ -291,14 +291,20 @@ nav h1 a:hover {
 
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  /* height: 87%; */
-  /* position: fixed; */
   right: 0;
-  top: 80px;
-  /* width: 50%; */
+  top: 130px;
   height: 500px;
   position: relative;
   width: 100%;
+}
+
+@media all and (min-width: 1200px) {
+  .inside #map-container  {
+    height: 100%;
+    position: fixed;
+    width: 50%;
+    top: 80px;
+  }
 }
 
 .inside #map {
@@ -354,9 +360,16 @@ nav h1 a:hover {
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 80px 40px 30px;
+  padding: 130px 40px 30px;
   width: 100%;
   text-align: center;
+}
+
+@media all and (min-width: 1200px) {
+  #restaurant-container,
+  #reviews-container {
+    width: 50%;
+  }
 }
 
 #reviews-container {
